--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bs-bastet": "^1.2.5",
+    "rationale": "^0.2.0",
+    "re-formality": "^4.0.0-beta.7",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "reason-react": ">=0.7.1",
